feat: 引用部分修改

--- a/src/edge/baseEdge.less
+++ b/src/edge/baseEdge.less
@@ -1,23 +1,22 @@
-@import '../../example/colorVariable.less';
 .butterflies-link {
   fill: none;
-  stroke: @butterfly-line-color;
+  stroke:  #BFBFBF;
   stroke-width: 1px;
 }
 .butterflies-link:hover {
-  stroke: @butterfly-primary-color;
+  stroke: #F66902;
 }
 .butterflies-label {
   position: absolute;
 }
 .butterflies-arrow {
-  fill: @butterfly-line-color;
-  stroke: @butterfly-line-color;
+  fill:  #BFBFBF;
+  stroke:  #BFBFBF;
   stroke-width: 1px;
 }
 .butterflies-arrow:hover {
-  fill: @butterfly-primary-color;
-  stroke: @butterfly-primary-color;
+  fill: #F66902;
+  stroke: #F66902;
 }
 
 .butterflies-link-event-handler {
