--- a/src/group/baseGroup.less
+++ b/src/group/baseGroup.less
@@ -1,4 +1,3 @@
-@import '../../example/colorVariable.less';
 .butterfly-wrapper {
   .group {
     position: absolute;
@@ -8,17 +7,17 @@
       height: 30px;
       cursor: move;
       font-size: 12px;
-      color: @butterfly-overlay-font-color;
+      color: #FFF;
       line-height: 30px;
       padding-left: 12px;
       border-radius: 9px 9px 0 0;
-      background: @butterfly-primary-color;
+      background: #F66902;
     }
     .container {
       // position: relative;
       width: 100%;
       height: calc(~'100% - 30px');
-      background: @butterfly-box-move-background-color;
+      background: rgba(246,105,2,0.20);
       border-radius: 0 0 9px 9px;
     }
     .group-icon-resize {
