--- a/example/demo/radial/node.less
+++ b/example/demo/radial/node.less
@@ -4,7 +4,8 @@
     height: 30px;
     line-height: 30px;
     text-align: center;
-    border-radius: 50%;
-    border: 1px solid #999;
-    background: #C6E5Ff;
+    border-radius: @butterfly-box-radius;
+    border: @butterfly-box-border;
+    background: @butterfly-primary-color;
+    color: @butterfly-overlay-font-color;
   }
