--- a/example/index.less
+++ b/example/index.less
@@ -8,6 +8,7 @@ html, body {
 #main {
   width: 100%;
   height: 100%;
+  padding: 60px 0 0 0;
 
   .ant-layout, .ant-layout-content {
     height: 100%;
