fix(demo): batch fix

--- a/example/pages/code-box/index.less
+++ b/example/pages/code-box/index.less
@@ -1,9 +1,11 @@
 .code-box {
+
  .editor {
    float: right;
    width: calc(100% - 120px);
    display: flex;
    height: calc(100vh - 60px);
+   overflow: hidden;
 
    .code-editor {
      width: 50%;
@@ -16,6 +18,8 @@
 
    #demo-div {
      border: none;
+     margin-top: -40px;
+     height: 105%;
    }
  } 
 }
