--- a/example/pages/layout/coms/index.less
+++ b/example/pages/layout/coms/index.less
@@ -24,7 +24,12 @@
     .ant-menu-item {
       border-bottom: 0px solid transparent;
       padding: 7px 20px;
+
+      &.icon {
+        padding: 7px 0px;
+      }
     }
+
     .ant-menu-item-selected {
       background: transparent;
       border-bottom: 0px solid transparent;
