--- a/example/theme.less
+++ b/example/theme.less
@@ -1,4 +1,11 @@
-@import './defaultTheme.less';
+@butterfly-theme-color-base:#fff;
+@butterfly-normal-font-color-base:#222;;
+@butterfly-overlay-font-color-base:#FFF;
+@butterfly-primary-color-base:#F66902;
+@butterfly-box-border-color-base: #D9D9D9;
+@butterfly-box-shadow-base:0 2px 3px 0 rgba(0,112,204,0.06);
+@butterfly-box-radius-base:100px;
+@butterfly-line-color-base: #BFBFBF;
 // 主题背景色（画布背景色）
 @butterfly-theme-background-color: @butterfly-theme-color-base;
 // （各图形框）普通情况背景色
