feat: home page

--- a/example/pages/layout/coms/index.less
+++ b/example/pages/layout/coms/index.less
@@ -17,6 +17,12 @@
     align-items: center;
   }
 
+  .logo {
+    height: 25px;
+    margin-left: 20px;
+    line-height: 36px;
+  }
+
   .ant-menu {
     text-align: right;
     height: 60px;
