--- a/example/pages/code-box/index.less
+++ b/example/pages/code-box/index.less
@@ -5,9 +5,34 @@
    display: flex;
    height: calc(100vh - 60px);
    overflow: hidden;
+   position: relative;
+
+  .codebox_open {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 39px;
+    width: 39px;
+    background-color: white;
+    text-align: center;
+    line-height: 39px;
+    box-shadow: 0px 0px 5px #ddd;
+    background: #fefefe;
+    cursor: pointer;
+  }
 
    &.fold {
     width: calc(100% - 1px);
+   }
+
+   &.editor-fold {
+    .code-editor {
+      width: 0;
+    }
+
+    .demo {
+      width: 100%;
+    }
    }
 
    .code-editor {
