feat(demo): loading img

--- a/example/pages/code-box/index.less
+++ b/example/pages/code-box/index.less
@@ -42,6 +42,9 @@
 
    .demo {
      width: 50%;
+     background-image: url(https://s3.ax1x.com/2021/02/17/ygbjc8.gif);
+     background-repeat: no-repeat;
+     background-position: center;
    }
 
    #demo-div {
