--- a/example/pages/home/index.less
+++ b/example/pages/home/index.less
@@ -3,6 +3,10 @@
     padding: 20px;
     text-align: center;
     padding-bottom: 60px;
+    background: url('https://img.alicdn.com/imgextra/i2/O1CN01wz1LF61kQZSU0uaa7_!!6000000004678-2-tps-2880-1000.png') center center no-repeat;
+    background-size: cover;
+    height: 500px;
+    box-sizing: border-box;
   }
 
   .main-title {
@@ -14,9 +18,15 @@
   }
 
   .sub-title {
-    color: #454d64;
-    font-size: 16px;
+    color: #fff;
+    font-size: 14px;
     font-weight: lighter;
+    width: 42%;
+    margin: 0 auto;
+    line-height: 28px;
+    letter-spacing: 0.44px;
+    font-family: PingFangSC-Medium;
+    background-image: linear-gradient(270deg, rgba(194,148,136,0.00) 0%, #724E1F 48%, rgba(194,148,136,0.00) 100%);
   }
 
   .link-button {
@@ -37,28 +47,57 @@
   }
   
   .feature {
-    width: 70%;
+    width: 80%;
     margin: auto;
     overflow: hidden;
-
+    box-shadow: 0 2px 16px 0 rgba(0,0,0,0.10);
+    border-radius: 4px;
+    padding: 40px 0;
+    margin-top: -130px;
+    background: #fff;
     .feature-box {
       text-align: center;
       width: 33%;
       float: left;
-      background-repeat: no-repeat;
-      padding-top: 60px;
-      background-size: 60px;
-      background-position-x: center;
       padding-left: 50px;
       padding-right: 50px;
+      .feature-img {
+        height: 120px;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: contain;
+      }
+      .feature-name {
+        margin-top: 20px;
+        margin-bottom: 10px;
+        font-size: 20px;
+        color: #222222;
+        letter-spacing: 0.63px;
+        font-family: PingFangSC-Medium;
+        font-weight: 600;
+      }
+      .feature-description {
+        font-family: PingFangSC-Regular;
+        font-size: 16px;
+        color: #555555;
+        letter-spacing: 0.5px;
+        text-align: center;
+      }
     }
   }
 
   .demo-img {
-    width: 70%;
+    width: 80%;
     margin: auto;
-    padding-top: 70px;
-
+    padding-top: 40px;
+    .demo-title {
+      font-family: PingFangSC-Medium;
+      font-size: 34px;
+      color: #262626;
+      letter-spacing: 0.57px;
+      text-align: center;
+      font-weight: 600;
+    }
     img {
       width: 100%;
     }
