feat: home footer

--- a/example/pages/home/index.less
+++ b/example/pages/home/index.less
@@ -102,4 +102,95 @@
       width: 100%;
     }
   }
+  .home-footer{
+    height: 300px;
+    width: 100%;
+    background-color: #262626;
+    color: #fff;
+    position: relative;
+    h3{
+      color: #fff;
+      margin-bottom: 20px;
+      font-family: PingFangSC-Regular;
+      font-size: 20px;
+    }
+    .home-footer-item{
+      margin: 0;
+      padding-top: 38px;
+      width: 33.33%;
+    }
+    .home-footer-hr{
+      margin: 0;
+      width: 100%;
+      opacity: 0.2;
+      background: #FFFFFF;
+      position: absolute;
+      bottom: 76px;
+    }
+    .home-footer-content{
+      height: 223px;
+      max-width: 1600px;
+      margin: 0 auto;
+      display: flex;
+    }
+    .home-footer-info{
+      padding-top: 15px;
+      text-align: center;
+      font-size: 12px;
+    }
+    .home-footer-team {
+      height: 100%;
+      display: inline-block;
+      text-align: center;
+      .home-user-list {
+        display: flex;
+        flex-wrap: wrap;  
+        justify-content: center;
+      }
+      .user-item{
+        width: 60px;
+        margin-right: 20px;
+      }
+      .user-item:last-child {
+        margin-right: 0px;
+      }
+      .avatar{
+        border-radius: 30px;
+        width:60px;
+        height:60px; 
+        background: #eee;
+        margin-bottom: 8px;
+      }
+      .name{
+        font-family: PingFangSC-Regular;
+        font-size: 12px;
+        margin-top: 10px;
+      }
+    }
+    .home-footer-link{
+      display: inline-block;
+      height: 100%;
+      text-align: center;
+      .link-item-list{
+        display: flex;
+        flex-wrap: wrap;
+        text-align: center;
+        width: 300px;
+        margin-left: 30%;
+        .link-item{
+          width: 50%;
+          text-align: left;
+          font-size: 12px;
+        }
+      }
+    }
+    .home-footer-help{
+      height: 100%;
+      color: #fff;
+      text-align: center;
+      .home-footer-help-img{
+        width: 104px;
+      }
+    }
+  }
 }
