--- a/example/pages/home/index.less
+++ b/example/pages/home/index.less
@@ -149,15 +149,15 @@
       }
       .user-item{
         width: 60px;
-        margin-right: 20px;
+        margin-left: 20px;
       }
       .user-item:last-child {
         margin-right: 0px;
       }
       .avatar{
         border-radius: 30px;
-        width:60px;
-        height:60px; 
+        width:50px;
+        height:50px; 
         background: #eee;
         margin-bottom: 8px;
       }
@@ -174,11 +174,10 @@
       .link-item-list{
         display: flex;
         flex-wrap: wrap;
-        text-align: center;
-        width: 300px;
-        margin-left: 30%;
+        width: 80px;
+        margin: 0 auto;
         .link-item{
-          width: 50%;
+          width: 100%;
           text-align: left;
           font-size: 12px;
         }
@@ -189,7 +188,7 @@
       color: #fff;
       text-align: center;
       .home-footer-help-img{
-        width: 104px;
+        width: 100px;
       }
     }
   }
