--- a/plugins/panel/example/butterfly-test/index.less
+++ b/plugins/panel/example/butterfly-test/index.less
@@ -5,9 +5,13 @@
     width: 100%;
     background-color: beige;
   }
+  .dnd1 {
+    width: 100%;
+    background-color: antiquewhite;
+  }
   .test-canvas {
     width: 100%;
-    height: 600px;
+    height: 400px;
     background-color: #eee;
   }
 }
