fixbug and add initdraw

--- a/plugins/panel/src/node/panel-node.less
+++ b/plugins/panel/src/node/panel-node.less
@@ -17,6 +17,10 @@
     height: 100%;
   }
 
+  .unactived {
+    display: none !important;
+  }  
+
   .point {
     position: absolute;
     z-index: 100;
