--- a/example/pages/code-box/index.less
+++ b/example/pages/code-box/index.less
@@ -40,11 +40,20 @@
      border-right: #ebedf0 1px solid;
    }
 
-   .demo {
+   .demo {     
      width: 50%;
-     background-image: url(https://s3.ax1x.com/2021/02/17/ygbjc8.gif);
      background-repeat: no-repeat;
      background-position: center;
+
+    .playground {
+      height: 100%;
+      width: 100%;
+    }
+
+     #root {
+      height: 100%;
+      width: 100%;
+    }
    }
 
    #demo-div {
