chore: approve code

--- a/example/pages/code-box/index.less
+++ b/example/pages/code-box/index.less
@@ -62,4 +62,10 @@
      height: 105%;
    }
  } 
+
+ .playground-error {
+    color: red;
+    padding: 100px 50px;
+    white-space: pre-line;
+  }
 }
