add routine and modify some

--- a/plugins/panel/src/node/panel-node.less
+++ b/plugins/panel/src/node/panel-node.less
@@ -2,8 +2,7 @@
   position: absolute;
   line-height: 0px;
   text-align: center;
-  background: rgba(255, 255, 255, 0.8);;
-  border: 1px solid #D9D9D9;;
+  border: 1px solid #D9D9D9;
   box-shadow: 0 2px 3px 0 rgba(0,112,204,0.06);
   color: #222;
 
