--- a/plugins/layout/example/src/app1.less
+++ b/plugins/layout/example/src/app1.less
@@ -9,6 +9,12 @@
     .kedroviz-canvas {
       width: 100%;
       height: 100%;
+      .butterfly-wrapper {
+        transform: scale(0.254);
+        transform-origin: 85.2832% 54.1019%;
+        left: -1078.08px;
+        top: -71.8623px;
+      }
     }
   
     .kedroviz-base-node {
