--- a/plugins/layout/src/kedroviz/layers/baseLayers.less
+++ b/plugins/layout/src/kedroviz/layers/baseLayers.less
@@ -5,6 +5,25 @@
   .butterfly-layer:hover {
     background: #eee;
   }
+  .butterfly-layer-app {
+    background: rgba(227, 244, 247, 0.3);
+  }
+  .butterfly-layer-app:hover {
+    background: rgba(227, 244, 247, 1);
+  }
+  .butterfly-layer-api {
+    background: rgba(240, 233, 255, 0.3);
+  }
+  .butterfly-layer-api:hover {
+    background: rgba(240, 233, 255, 1);
+  }
+  .butterfly-layer-physical-table {
+    background: rgba(136, 184, 255, 0.1);
+  }
+  .butterfly-layer-physical-table:hover {
+    background: rgba(136, 184, 255, 0.2);
+  }
+  
   
   .butterfly-flowchart__layer-names {
     position: absolute;
@@ -31,10 +50,8 @@
     display: flex;
     align-items: center;
     height: 20px;
-    padding-left: 18px;
-    color: #555;
     font-weight: bold;
-    font-size: 1.6em;
+    font-size: 24px;
     white-space: nowrap;
   }
 }
