--- a/plugins/layout/src/kedroviz/layers/baseLayers.less
+++ b/plugins/layout/src/kedroviz/layers/baseLayers.less
@@ -2,27 +2,27 @@
   .butterfly-layer {
     position: absolute;
   }
-  .butterfly-layer:hover {
-    background: #eee;
-  }
+  // .butterfly-layer:hover {
+  //   background: #eee;
+  // }
   .butterfly-layer-app {
     background: rgba(28, 168, 189, 0.1);
   }
-  .butterfly-layer-app:hover {
-    background: rgba(28, 168, 189, 0.2);
-  }
+  // .butterfly-layer-app:hover {
+  //   background: rgba(28, 168, 189, 0.2);
+  // }
   .butterfly-layer-api {
     background: rgba(134, 76, 255, 0.1);
   }
-  .butterfly-layer-api:hover {
-    background: rgba(134, 76, 255, 0.2);
-  }
+  // .butterfly-layer-api:hover {
+  //   background: rgba(134, 76, 255, 0.2);
+  // }
   .butterfly-layer-physical-table {
     background: rgba(136, 184, 255, 0.1);
   }
-  .butterfly-layer-physical-table:hover {
-    background: rgba(136, 184, 255, 0.2);
-  }
+  // .butterfly-layer-physical-table:hover {
+  //   background: rgba(136, 184, 255, 0.2);
+  // }
   
   
   .butterfly-flowchart__layer-names {
